// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableLabel should render correctly 1`] = `
.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0.25rem;
}

.emotion-0 {
  fill: #cccccc;
  font-size: 1rem;
}

<span
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        data-name="sort"
      >
        <path
          d="M12 19.06l-4.95-4.95-1.41 1.42L12 21.89l6.36-6.36-1.41-1.42L12 19.06zM12 4.94l4.95 4.95 1.41-1.42L12 2.11 5.64 8.47l1.41 1.42L12 4.94z"
        />
      </g>
    </svg>
  </span>
</span>
`;

exports[`SortableLabel should render correctly 2`] = `
.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0.25rem;
}

.emotion-0 {
  fill: #056DFF;
  font-size: 1rem;
}

<span
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M5.64 9.53l1.41-1.42L12 13.06l4.95-4.95 1.41 1.42L12 15.89 5.64 9.53z"
        data-name="angle-down"
      />
    </svg>
  </span>
</span>
`;

exports[`SortableLabel should render correctly 3`] = `
.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0.25rem;
}

.emotion-0 {
  fill: #056DFF;
  font-size: 1rem;
}

<span
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.36 14.47l-1.41 1.42L12 10.94l-4.95 4.95-1.41-1.42L12 8.11l6.36 6.36z"
        data-name="angle-up"
      />
    </svg>
  </span>
</span>
`;
